# alaa-token

./: .gitignore  Anchor.toml  Cargo.toml  README.md  mint.md  package.json  token.md  tsconfig.json  vitest.config.ts  wallet.md
artifacts/idl/: alaatoken.json  registrar.json
cli/: index.ts  processor.ts  utils.ts
programs/alaatoken/: Cargo.toml  program_id.md
programs/alaatoken/src/: account_structs.rs  errors.rs  lib.rs  macros.rs  state.rs
programs/registrar/: Cargo.toml
programs/registrar/src/: account_structs.rs  errors.rs  lib.rs  state.rs  validation.rs
scripts/: generate.sh  parse.sh
tests/: alaatoken.test.ts  helpers.ts
