[package]
name = "alaatoken"
version = "0.1.0"
description = "Main program to interact with the AlaaToken"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "alaatoken"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
spl-token = "3.2.0"
anchor-spl = "0.20.1"
borsh = "0.9.1"
