[package]
name = "registrar"
version = "0.1.0"
description = "Registrar program to register your altoken identity"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "registrar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
spl-token = "3.2.0"
anchor-spl = "0.20.1"
borsh = "0.9.1"
bytemuck = "1.7.3"
vipers = "1.5.7"
